Cars/Cars/force-app/main/default/objects/Travel_Request__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Travel Requests</relationshipLabel>
    <relationshipName>Travel_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>