Cars/Cars/force-app/main/default/objects/Travel_Request__c/fields/Out_of_State__c.field-meta.xml
<CustomField>
    <fullName>Out_of_State__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out of State</label>
    <type>Checkbox</type>
</CustomField>