Cars/Cars/force-app/main/default/objects/Travel_Request__c/fields/Place_of_Travel__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Travel__c</fullName>
    <label>Place of Travel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Dehradun</fullName>
            </value>
            <value>
                <fullName>Bhopal</fullName>
            </value>
            <value>
                <fullName>Mangalore</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Kerala</fullName>
            </value>
            <value>
                <fullName>Andaman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>