Cars/Cars/force-app/main/default/objects/Travel_Request__c/fields/Request_Name__c.field-meta.xml
<CustomField>
    <fullName>Request_Name__c</fullName>
    <label>Request Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>