Cars/Cars/force-app/main/default/objects/Travel_Request__c/fields/Total_Expense__c.field-meta.xml
<CustomField>
    <fullName>Total_Expense__c</fullName>
    <label>Total Expense</label>
    <summarizedField>Expense_Item__c.Amount__c</summarizedField>
    <summaryForeignKey>Expense_Item__c.Travel_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>